<resources>
    <string name="app_name">Trailer Apple</string>
    <string name="title_activity_maps">Mapas</string>
    <string name="title_activity_main">Actividad principal</string>
    <string name="action_settings">Ajustes</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_billboard_detail">Detalle Pelicula</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
    </string>
    <string name="error">Error</string>
    <string name="validate_internet">No tiene conexión a internet</string>
    <string name="loading_message">Cargando...</string>
    <string name="accept">Aceptar</string>
    <string name="option_cancel">Cancelar</string>
    <string name="recent_news">Da Nang International Fireworks Festival 2017</string>
    <string name="in_news">Da Nang International Fireworks Festival 2017Update: Dec 08, 2016 (TITC) - Da Nang International Fireworks Festival 2017 (DIFF 2017) with the theme “Shining Marble Mountains” will take place for two months, from 29 April to 24 June 2017 with the aim to Da Nang become a unique cultural festival tourism space. </string>
    <string name="publish_date">2017-04-30 12:13:14</string>
    <string name="cast">Reparto</string>
    <string name="genre">Acción | Misterio | Suspenso</string>
    <string name="name_record">Alpha</string>
    <string name="date">Mon, 06 Nov 2017 01:00:01 -0800</string>
    <string name="btn_guia1">Paso #1</string>
    <string name="btn_guia2">Paso # 2</string>
    <string name="final_tour">Fin Tour</string>
    <string name="location_error">Error al obtener ubicaciones</string>
    <string name="tweets">Tweets</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="seguidores">Seguidores</string>
    <string name="tweets_count">0</string>
    <string name="siguiendo_count">0</string>
    <string name="alexlondon07">alexlondon07</string>
    <string name="alexander">Alexander Londoño</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">UbWeok7LChx5ZQVVlMSFpBeux</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">MgKrpBcPoD9MZFHC3XAYStSihQq18dKBRMcrD9FaRzx6mn6Dxl</string>
    <string name="profile">Perfil Twitter</string>
    <string name="nickname">Usuario</string>
    <string name="your_photo">Tu foto Aquí</string>
    <string name="route_app">io.github.alexlondon07.finalproject</string>
</resources>
