<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="io.github.alexlondon07.finalproject.view.activities.ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/session_photo"
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_launcher1"
                android:contentDescription="Tu foto Aquí"
                android:padding="2dp" />

            <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                android:id="@+id/session_name_user"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignBottom="@+id/session_nickname"
                android:layout_marginBottom="24dp"
                android:layout_toEndOf="@+id/session_photo"
                android:paddingTop="5dp"
                android:text="@string/alexander"
                android:textAlignment="center" />

            <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                android:id="@+id/session_nickname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/session_photo"
                android:paddingTop="5dp"
                android:text="@string/alexlondon07"
                android:textAlignment="center" />

        </RelativeLayout>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/tweets"/>

            <TextView
                android:id="@+id/session_likes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tweets_count"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siguiendo"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/session_following"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siguiendo_count"
                android:textAlignment="center" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="vertical">

            <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/seguidores"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/session_followers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tweets_count"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

    <com.twitter.sdk.android.core.identity.TwitterLoginButton
        android:id="@+id/login_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp" />


</LinearLayout>





