<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.alexlondon07.finalproject.view.activities.RecordDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:title="@string/recent_news"
                app:layout_collapseMode="pin"
                />

            <ImageView
                android:id="@+id/session_photo_main"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/peli"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                    android:id="@+id/activity_record_detail_textView_name"
                    android:padding="12dp"
                    android:textSize="20sp"
                    android:layout_marginTop="12dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">



                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/session_photo"
                            android:layout_width="140dp"
                            android:layout_height="150dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/ic_launcher1"
                            android:contentDescription="Tu foto Aquí"
                            android:padding="2dp" />

                        <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                            android:id="@+id/session_name_user"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignBottom="@+id/session_nickname"
                            android:layout_marginBottom="24dp"
                            android:layout_toEndOf="@+id/session_photo"
                            android:paddingTop="5dp"
                            android:text="@string/alexander"
                            android:textAlignment="center" />

                        <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                            android:id="@+id/session_nickname"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/session_photo"
                            android:paddingTop="5dp"
                            android:text="@string/alexlondon07"
                            android:textAlignment="center" />

                    </RelativeLayout>


                </LinearLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:orientation="vertical">

                        <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:text="@string/tweets"/>

                        <TextView
                            android:id="@+id/session_likes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tweets_count"
                            android:textAlignment="center" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:orientation="vertical">

                        <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/siguiendo"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/session_following"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/siguiendo_count"
                            android:textAlignment="center" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:orientation="vertical">

                        <io.github.alexlondon07.finalproject.helper.customclasses.CustomTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/seguidores"
                            android:textAlignment="center" />

                        <TextView
                            android:id="@+id/session_followers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tweets_count"
                            android:textAlignment="center" />
                    </LinearLayout>

                </LinearLayout>

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/login_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>



</android.support.design.widget.CoordinatorLayout>